--- a/src/components/contactBox.css
+++ b/src/components/contactBox.css
@@ -8,6 +8,19 @@
   text-align: center;
   margin-bottom: -2px;
   margin-top: 0px;
+  display: inline-block;
+}
+
+.background {
+  width: 80px;
+  height: 80px;
+  background-color: darkblue;
+  position: absolute;
+  margin-left: -87px;
+  margin-right: 0px;
+  z-index: 1;
+  margin-top: 2px;
+  display: inline-block;
 }
 
 .icons {
@@ -34,6 +47,7 @@
   margin-left: 20px;
   margin-top: 10px;
   font-family: "Raleway", sans-serif;
+  position: absolute;
 }
 
 .followBtn {
@@ -47,17 +61,6 @@
   font-family: "Raleway", sans-serif;
   color: darkblue;
   border-radius: 0px;
-}
-
-.background {
-  width: 80px;
-  height: 80px;
-  background-color: darkblue;
-  position: relative;
-  margin-left: -87px;
-  margin-right: 7px;
-  z-index: 1;
-  margin-top: 2px;
 }
 
 .QRcode {
